--- a/desafios/desafio 012/estilo/style.css
+++ b/desafios/desafio 012/estilo/style.css
@@ -7,9 +7,9 @@
 
 html,body {
     min-height: 100vh;
-    background-color: darkgray
-    ;
+    background-color: darkgray;
 }
+
 header {
     background-color: black;
     color: white;
@@ -35,6 +35,7 @@ header a :hover, footer a:hover {
     text-decoration: underline;
 
 }
+
 section {
     padding-top: 10vh;
     padding-bottom: 10vh;
